# KSA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ksa/: __init__.py  run_invoice.py  run_shipping.py  run_upricing.py  run_window.py
ksa/invoice/: __init__.py  extract.py
ksa/invoice/input/: csv_format.py  pdf_format.py  xls_format.py  xml_format.py
ksa/invoice/input/customer/pdf_format/: FL2658.py  FL4494.py  MA0603.py  NV0356.py  Others.py
ksa/query/: __init__.py  query.py
ksa/shipping/: template.py
ksa_api/: README.md  api.py  config.py  po_handler.py  pricing_handler.py  shipping_handler.py  utils.py
ksa_api/outlook/: email_handler.py
ksa_api/query/: db_handler.py
webapp/backend/: manage.py
webapp/backend/ksa_api/: asgi.py  env.py  urls.py  wsgi.py
webapp/backend/ksa_api/settings/: base.py  local.py  production.py
webapp/backend/shipping/: models.py  serializers.py  views.py
webapp/backend/shipping/management/commands/: delete_data.py  dumpdata.py
webapp/frontend/src/: App.jsx  index.css
webapp/frontend/src/components/: Navbar.jsx  footer.jsx
webapp/frontend/src/layout/: MainLayout.jsx  testroutes.jsx
webapp/frontend/src/pages/: color.jsx  custom.css  dashboard.jsx  shipping.jsx  supplier.jsx
